legacy/differential_testing/gcc_regression/gcc_reg_cb/results/gcc482/save_st/pr66618-2.c-4.8.2-0.out.txt
pr66618-2.c:5:1: error: initializer element is not constant
 int a = "foo"[2];
 ^
pr66618-2.c:6:1: error: initializer element is not constant
 int b = 1["bar"];
 ^
pr66618-2.c:7:1: error: initializer element is not constant
 int c = "baz"[__INT_MAX__ * -2];  
 ^
pr66618-2.c:8:1: error: initializer element is not constant
 int d = "str"[3];    
 ^
pr66618-2.c:9:1: error: initializer element is not constant
 int e = "str"[4];    
 ^
pr66618-2.c:10:1: error: initializer element is not constant
 int f = "str"[-1];    
 ^
